<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetDataTransfer</string>
    <string name="exit">退出</string>
    <string name="about">飞鸽传书android版</string>
	<string name="sendText">发送</string>
	<string name="editText_hint">请输入</string>
	<string name="pull_to_refresh">↓ 下拉可以刷新</string>  
    <string name="release_to_refresh">↑ 释放立即刷新</string>  
    <string name="device_info">\n设备信息</string>
    <string name="send_progress">文件发送进度</string>
    <string name="get_progress">文件接收进度</string>
    <string name="open_folder">查看文件</string>
    <string name="scan">扫一扫</string>
    <string name="me">我</string>
    <string name="close_chat">退出聊天</string>
    <string name="users_title">用户列表</string>
    <string name="copy_menu">复制</string>
</resources>
